Tried to fix small select\unselect icons on mobile

--- a/src/styles/exercises.css
+++ b/src/styles/exercises.css
@@ -43,6 +43,7 @@
 
     svg {
         height: 1.25em;
+        flex-shrink: 0;
         padding: 0.3em;
         border-radius: 1em;
         transition: background-color 0.2s ease-in-out;
